# gnostr-wasm

./: Cargo.toml  Trunk.toml  index.html
.github/workflows/: rust.yml
scripts/: build.sh  bundle.sh  common.sh  deploy.sh
src/: app.rs  backend.rs  lib.rs  main.rs  ui.rs  wry_app.rs
