[package]
name = "demo-gnostr"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
## ratzilla.workspace = true
ratzilla = "0.3.1"
## rand = { workspace = true, features = ["small_rng"] }
rand = { version = "0.9.2", default-features = false, features = ["small_rng"]  }
## tachyonfx.workspace = true
tachyonfx = { version = "0.23.0", default-features = false, features = ["wasm"] }
## web-time.workspace = true
web-time = "1.1.0"
## examples-shared.workspace = true
## critical-section.workspace = true
critical-section = { version = "1.2", features = ["std"] }
## # tui-big-text = "0.6.1"
## tui-textarea = { git = "https://github.com/0xferrous/tui-textarea", rev = "b6bf812d1f5edab4f311f56d405a47341e9423cf" }
web-sys = { version = "0.3.81", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "Location",
    "Url",
    "UrlSearchParams",
] }
wasm-bindgen = "0.2.108"
