[package]
name = "gnostr-wasm"
version = "0.0.2"
edition = "2021"
publish = false

[features]
wry-app = ["dep:tao", "dep:wry"]

[dependencies]
critical-section = { version = "1.2", features = ["std"] }
rand = { version = "0.9.2", default-features = false, features = ["small_rng"] }
ratzilla = "0.3.1"
tachyonfx = { version = "0.23.0", default-features = false, features = ["wasm"] }
tao = { version = "0.35.3", optional = true }
wasm-bindgen = "0.2.108"
## # tui-big-text = "0.6.1"
## tui-textarea = { git = "https://github.com/0xferrous/tui-textarea", rev = "b6bf812d1f5edab4f311f56d405a47341e9423cf" }
web-sys = { version = "0.3.81", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "Location",
    "Url",
    "UrlSearchParams",
] }
web-time = "1.1.0"
wry = { version = "0.55.1", optional = true }
