[package]
name = "gnostr-wasm"
version = "0.0.2"
edition = "2021"
description = "Ratzilla web and wry desktop apps for gnostr"
publish = false

[package.metadata.bundle]
name = "gnostr-wasm"
identifier = "org.gnostr.gnostr-wasm"
icon = ["icons/icon.png"]
category = "Utility"
short_description = "gnostr-wasm"

[package.metadata.bundle.bin.gnostr-wasm]
name = "gnostr-wasm"
identifier = "org.gnostr.gnostr-wasm"
icon = ["icons/icon.png"]
category = "Utility"
short_description = "gnostr-wasm"
resources = ["dist"]

## [package.metadata.bundle.bin.gnostr-cloud]
## name = "gnostr-cloud"
## identifier = "org.gnostr.gnostr-cloud"
## icon = ["icons/icon.png"]
## category = "Utility"
## short_description = "gnostr-cloud"
## resources = ["dist"]
## 
## [package.metadata.bundle.example.goodbye]
## name = "Goodbye"
## identifier = "io.github.burtonageo.cargo-bundle.goodbye"
## icon = ["examples/goodbye/icon32x32.png", "examples/goodbye/icon128x128.png"]
## category = "Developer Tool"
## short_description = "An example CLI application showing PNG icon bundling"
## long_description = """
## A simple command-line application that demonstrates bundling a Rust binary
## with PNG icons using cargo-bundle.
## """

[package.metadata.bundle.example.hello]
name = "hello"
identifier = "io.github.burtonageo.cargo-bundle.hello"
icon = ["examples/hello/icon.svg", "examples/hello/icon*.png"]
category = "Utility"
short_description = "An example of a bundled application"
long_description = """
A trivial application that just displays a blank window with
a title bar.  It serves as an example of an application that
can be bundled with cargo-bundle, as well as a test-case for
cargo-bundle's support for bundling crate examples.
"""

[features]
wry-app = ["dep:tao", "dep:wry", "dep:muda"]

[dependencies]
critical-section = { version = "1.2", features = ["std"] }
rand = { version = "0.9.2", default-features = false, features = ["small_rng"] }
ratzilla = "0.3.1"
tachyonfx = { version = "0.23.0", default-features = false, features = ["wasm"] }
tao = { version = "0.35.3", optional = true }
wasm-bindgen = "0.2.108"
muda = { version = "0.19", optional = true }
## # tui-big-text = "0.6.1"
## tui-textarea = { git = "https://github.com/0xferrous/tui-textarea", rev = "b6bf812d1f5edab4f311f56d405a47341e9423cf" }
web-sys = { version = "0.3.81", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "Location",
    "Url",
    "UrlSearchParams",
] }
web-time = "1.1.0"
wry = { version = "0.55.1", optional = true }


#[dev-dependencies]
winit = "0.30.13"

[[example]]
name = "hello"
path = "examples/hello/main.rs"

[[example]]
name = "goodbye"
path = "examples/goodbye/main.rs"
